Use promotion hint rect for overlay initial position.

When promoting video to an overlay in AVDA, we need to provide an
initial rect for it.  This CL sets that rect to be the same as the
one for the most recent promotion hint, so that it lines up with
wherever the non-overlay video quad was.

It also introduces a delay before switching to overlays when
transitioning into fullscreen to give the blink layout time to
finish.  This makes the transition look much better.

Bug: 752504
Change-Id: I01b512c40cdffbbe597ebf7eadeb705bf406812f