media/base/media_switches.cc
@@ -201,7 +201,7 @@ const base::Feature kMediaCastOverlayButton{"MediaCastOverlayButton",
                                             base::FEATURE_ENABLED_BY_DEFAULT};
 
 // Use AndroidOverlay rather than ContentVideoView in clank?
-const base::Feature kUseAndroidOverlay{"use-android_overlay",
+const base::Feature kUseAndroidOverlay{"UseAndroidOverlay",
                                        base::FEATURE_DISABLED_BY_DEFAULT};
 
 // Let video track be unselected when video is playing in the background.
