media/gpu/android/promotion_hint_aggregator.h
@@ -22,6 +22,8 @@ class MEDIA_GPU_EXPORT PromotionHintAggregator {
   struct Hint {
     int x = 0;
     int y = 0;
+    int width = 0;
+    int height = 0;
     bool is_promotable = false;
   };
 
